# HiGHS

./: .clang-format  .gitignore  BUILD.bazel  CMakeLists.txt  HConfig.h.bazel  README.md  Temp.py  Version.txt  examples.py  make.jl  manifest.in  meson.build  meson_options.txt  pyproject.toml
.github/workflows/: build-bazel.yml  build-clang.yml  build-default.yml  build-mingw.yml  build-self.yml  build-wheels.yml  build-windows.yml  clang-format.yml  test-c-example.yml
app/: CMakeLists.txt  RunHighs.cpp  highs_webdemo_shell.html
check/: CMakeLists.txt  TestBasisSolves.cpp  TestFreezeBasis.cpp  TestLpModification.cpp  TestPresolve.cpp  TestRanging.cpp  TestSifting.cpp
cmake/: c-highs.cmake  coverage.cmake  cpp-highs.cmake
docs/: HiGHS_CopyrightHeaderUpdateAll  README.md  about.html  binaries.html  executable.html  get-started.html  guide.html  home.html  index.html  interfaces.html  options.html  parallel.html  run-executable.html  search.html  search_index.js  terminology.html
docs/cpp/: examples.html  get-started.html  library.html  link.html  options.html
docs/man/: examples.html  guide.html  interfaces.html  link.html  options.html
docs/options/: definitions.html  intro.html
docs/python/: classes.html  enums.html  example-py.html  notebooks.html  pip.html
docs/python/classes/: HighsBasis.html  HighsInfo.html  HighsLp.html  HighsSolution.html  HighsSparseMatrix.html  Index.html  Other.html
docs/src/: index.md  installation.md
docs/src/interfaces/: other.md
docs/src/interfaces/cpp/: index.md  library.md  link.md
examples/: CMakeLists.txt
highs/: CMakeLists.txt  HConfig.h.in  HConfig.h.meson.in  meson.build
highs/ipm/ipx/: ipx_c.h
highs/presolve/: HPresolve.cpp  HPresolve.h
highspy/tests/: test_highspy.py
src/: CMakeLists.txt  about.md  binaries.md  executable.md  get-started.md  guide.md  index.md  interfaces.md  options.md  parallel.md  terminology.md
src/cpp/: examples.md  get-started.md  library.md  link.md  options.md
src/interfaces/: highs_c_api.cpp
src/io/: Filereader.cpp  FilereaderBqpd.cpp  FilereaderBqpd.h  HighsIO.cpp
src/ipm/: IpxWrapper.cpp
src/ipm/basiclu/: lu_update.c
src/ipm/ipx/include/: ipx_parameters.h
src/ipm/ipx/src/: basis.cc  basis.h  control.h  guess_basis.cc  info.cc  ipm.cc  kkt_solver_basis.cc  lp_solver.cc  maxvolume.cc  maxvolume.h  splitted_normal_matrix.cc  splitted_normal_matrix.h  starting_basis.cc  starting_basis.h
src/lp_data/: HConst.h  HStruct.h  Highs.cpp  HighsInterface.cpp  HighsLp.cpp  HighsLp.h  HighsLpUtils.cpp  HighsLpUtils.h  HighsModelUtils.cpp  HighsOptions.h  HighsSolution.cpp  HighsSolve.cpp
src/mip/: HighsCliqueTable.cpp  HighsDomain.cpp  HighsDynamicRowMatrix.cpp  HighsDynamicRowMatrix.h  HighsImplications.cpp  HighsMipSolver.cpp  HighsMipSolver.h  HighsMipSolverData.cpp  HighsPrimalHeuristics.cpp  HighsSolutionPool.cpp  HighsSolutionPool.h  HighsTableauSeparator.cpp
src/options/: definitions.md  intro.md
src/parallel/: HighsTaskExecutor.h
src/presolve/: HPresolve.cpp  HPresolveAnalysis.cpp  HighsPostsolveStack.cpp  HighsPostsolveStack.h  ICrash.cpp  ICrash.h  ICrashUtil.cpp  ICrashUtil.h
src/python/: classes.md  enums.md  example-py.md  pip.md
src/qpsolver/: basis.cpp
src/simplex/: HEkk.cpp  HEkk.h  HEkkDebug.cpp  HEkkDual.cpp  HEkkDualMulti.cpp  HEkkDualRow.cpp  HEkkPrimal.cpp  HEkkSifting.cpp  HSimplexDebug.cpp  HSimplexDebug.h  HSimplexNla.cpp  HSimplexNla.h  HighsSimplexAnalysis.cpp  HighsSimplexAnalysis.h  SimplexConst.h  SimplexStruct.h
src/util/: HFactor.cpp  HFactor.h  HFactorConst.h  HFactorDebug.cpp  HFactorDebug.h  HFactorExtend.cpp  HFactorRefactor.cpp  HFactorUtils.cpp  HighsDataStack.h  HighsHash.h  HighsSparseMatrix.cpp  HighsSparseMatrix.h  HighsTimer.h  HighsUtils.cpp  HighsUtils.h
