load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

copy_file(
    name = "highs-config",
    src = "HConfig.h.bazel",
    out = "HConfig.h",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "config",
    srcs = ["HConfig.h"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "highs",
    srcs = glob([
        "extern/filereaderlp/*.cpp",
        "extern/filereaderlp/*.cpp",
        "highs/*.cpp",
        "highs/interfaces/highs_c_api.cpp",
        "highs/io/*.cpp",
        "highs/ipm/*.cpp",
        "highs/ipm/ipx/*.cc",
        "highs/ipm/basiclu/*.c",
        "highs/lp_data/*.cpp",
        "highs/mip/*.cpp",
        "highs/model/*.cpp",
        "highs/parallel/*.cpp",
        "highs/presolve/*.cpp",
        "highs/qpsolver/*.cpp",
        "highs/simplex/*.cpp",
        "highs/test/*.cpp",
        "highs/util/*.cpp", 
    ]),
    hdrs = glob([
        "HConfig.h",
        "**/*.h",
        "highs/qpsolver/*.hpp",
        "highs/Highs.h",
        "extern/filereaderlp/*.hpp",
        "extern/zstr/*.hpp"]),
    includes = [
        "extern",
        "highs",
        # "extern/filereaderlp",
        # "extern/zstr",
        # "src/ipm",
        # "src/ipm/ipx",
        # "src/ipm/basiclu",
        # "src/lp_data",
        # "src/mip",
        # "src/model",
        # "src/parallel",
        # "src/presolve",
        # "src/qpsolver",
        # "src/simplex",
        # "src/test",
        # "src/util",
        "bazel-bin"
        ],
    visibility = ["//visibility:public"],
        deps = [
        "//:config",
        "@zlib",
    ],
)

cc_binary(
    name = "call-highs-example",
    srcs= ["examples/call_highs_from_cpp.cpp"],
    deps = [
        "//:highs",
    ],
    visibility = ["//visibility:public"]
)